app/assets/stylesheets/custom.css.scss
@import "bootstrap";

$background_tan: #f2e9d8;
$charcoal_grey: #464646;
$selected_blue: #8094a6;

@font-face
{
  font-family: 'fauna-one';
  src: font-url('FaunaOne-Regular.ttf');
}

@font-face
{
  font-family: 'khmer';
  src: font-url('KhmerUI.ttf');
}

body
{
  background-color: $background_tan;
  color: $charcoal_grey;
  font-family: 'fauna-one';

  .secondary_container
  {
    margin-left: 105px;
    width: 943px;
  }

  .envelope
  {
    max-width: 943px;
    width: 943px;
    min-height: 454px;
  }

  .description_box
  {
    margin-top: 24px;
    margin-left: 17px;
    margin-right: 81px;
    width: 271px;
    height: 410px;
    overflow:auto;
    float: left;
  }

  .content_header
  {
    font-size: 25px;
    margin-left: 14px;
    margin-top: 27px;
  }

  .content_description
  {
    margin-top: 8px;
    margin-left: 31px;
    margin-right: 12px;
    max-width: 220px;
    width: 220px;
  }



  .edit_content
  {
    position: relative;
    z-index:99;
    top: 221px;
    left: -200px;
    height: 10px;
    margin-bottom: -10px;
    float: left;
  }

  .notice, .alert
  {
    background-color: $background_tan;
    float:left;
    border: 0;
  }

  .container
  {
    h1 
    {
      margin-bottom: 20px;
    }
  }

  .emphasis
  {
    color: $selected_blue;
  }

  #border
  {
    border: black 1px dotted;
    padding-bottom: 60px;
  }

  #titlebar
  {
    background: url("Andrada_Popan_Dorca_titlebar.png");
    width: 655px;
    height: 118px;
  }

  //navbar stuff
  .navbar
  {
    padding-left: 0px;
    margin-left: 46px;

    li
    {
      float:left;
      list-style-type:none;
    }

    a
    {
      font-size: 133%;
      color: #464646;
      display: block;
      // margin: 5px auto;
      margin-left:auto;
      margin-right:auto;
      padding: 0px 41px;
      max-width: 227px;
      width: 171px;

      &:hover
      {
        color: $selected_blue;
        text-decoration: none;
      }
    }
    a#navbar-first
    {
      padding-left: 30px;
    }

    .selected
    {
      color: $selected_blue;
    }
  }

  .sign_in
  {
    float: right;
    margin-bottom: 10px;
    margin-top: 15px;
  }

  //Main content
  .main_content
  {
    min-height: 454px;
    width: 943px;

    h3 {
      font-family: 'khmer';
      margin-top: -15px;
      margin-bottom: 10px;
    }
  }

  // Edit table
  .edit_table
  {

    td {
      max-width: 300px;
      overflow-x: scroll;
      padding: 0 5px;
    }

    img
    {
      max-width: 300px;
    }
  }

  //Save reminders
  #save_reminder
  {
    margin-bottom: 10px;
    color: $selected_blue;
  }

  //envelope items
  .description_box, .direction_button
  {
    background: rgba(0,0,0,0.55);
    color: $background_tan;
  }

  .description_box
  {
    border-radius: 15px;
    float: left;
  }

  //overlay stuff
  button.close
  {
    position: absolute;
    right: 0;
    top: 0;
  }

  .content_detail
  {
    display: none; //will be activated by clicking grid tiles
    position: relative;
    z-index: 10000;
    background-color: $background_tan;
    /* height: 600px; */
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    top: -166px;
  }

  .content_preview 
  {
    margin-top: 175px;
    height: 450px;

    .content_detail 
    {
      display: block;
      border: 1px black solid;
      z-index: 0;
    }

    input[type="submit"]
    {
      position: absolute;
      left: 20px;
    }

    #save_button_bottom
    {
      bottom: 79px;
    }

    #save_button_top 
    {
      left: 20px;
      top: 13px;
    }

    input[type="text"], textarea, input[type="number"]
    {
      background-color : #000; 
      color: #AAAAAA;
    }

    input[type="text"] 
    {
      max-width: 165px;
      text-align: center;
    }
  }

  .overlay
  {
	  z-index: 10000;
	  filter: alpha(opacity=50); /*older IE*/
	  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=50); /* IE */
	  -moz-opacity: .50; /*older Mozilla*/
	  -khtml-opacity: 0.5;   /*older Safari*/

	  opacity: 0.5;   /*supported by current Mozilla, Safari, and Opera*/
	  background-color:#000000;
	  position:fixed;
    top:0px;
    left:0px;
    width:100%;
    height:100%;
    text-align:center;
    vertical-align:middle;
    display: none;
  }

  // Detail lightbox
  .lightbox_main
  {
    /* height: 531px; */
    padding: 15px;
    line-height: 531px;
    
    img
    {
      max-height: 475px;
      max-width: 800px;
    }

    iframe
    {
      vertical-align: middle;
    }
    
    .lightbox_edit_link
    {
      position: absolute;
      line-height: 30px;
      right: 8px;
      bottom: 78px;
      font-size: 20px;
      height: 35px;
      width: 120px;
      background: green;
      border-radius: 20px;

      a {
        vertical-align: text-top;
        color: #FFFFFF;

        &:hover
        {
          text-decoration: none;
          font-size: 21px;
        }
      }
    }
  }

  .crop_image_popup 
  {
    position: absolute;
    text-align: center;
    border: 1px solid #000;
    display: none;
    background-color: $background_tan;
    top: 918px;
    left: 2px;
    width: 250px;
    height: 60%;
    overflow-x: hidden;

    input 
    {
      margin-left: 0;
    }

    .image_preview_box 
    {
      height: 185px;
      margin-bottom: 5px;

      .image_preview
      {
        margin-bottom: 5px;
      }
    }

    #crop_popup_save 
    {
      margin-top: 5px;
    }
  }

  .lightbox_bottom
  {
    height: 69px;
    background-color: #000000;
    opacity:0.8;
    filter:alpha(opacity=80); /* For IE8 and earlier */
    color: #AAAAAA;

    .content_header
    {
      height: inherit;
      display: table-cell;
      vertical-align: middle;
      text-align: center;
      font-size: 18px;
      padding: 0 17px;
      margin: 0 0;
      max-width: 200px;
      width: 200px;
      border-right: #444444 1px solid;
    }

    .content_description
    {
      height: inherit;
      display: table-cell;
      vertical-align: middle;
      width: 670px;
      max-width: 670px;
    }
  }


  //add content
  .add_new
  {
    position: absolute;
    top: 405px;
    right: 55px;
    font-size: 18px;
  }

  .fake_link 
  {
    cursor: pointer;
    color: #428bca;

    &:hover
    {
      text-decoration: underline;
    }
  }
}

